--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
 <meta charset="utf-8">	
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Rokkitt" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Rokkitt|Shadows+Into+Light" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="main.css">
 
 <header>
@@ -13,10 +16,10 @@
         <nav>
           <div class="nav">
             <ul>
-            <li><a href="#">About/</a></li>
-            <li><a href="#">Skills/</a></li>
-            <li><a href="#">Projects/</a></li>
-            <li><a href="#">Contact/</a></li>
+            <li><a href="#">About /</a></li>
+            <li><a href="#">Skills /</a></li>
+            <li><a href="#">Projects /</a></li>
+            <li><a href="#">Contact /</a></li>
             </ul>
           </div>
         </nav>
@@ -28,7 +31,9 @@
     <h1>Hey, I'm Susanne</h1> 
 
     <img class="susanne" src="images/IMG_5153.jpg" class="left">
-
+<h2>Former baby, former employee, current Student Front End Developer. The call in my life</h2>
+<h2> Dedicated and passionate Student at KYH. Main goal to become one of the best in coding and designing</h3>
+<p>"Aim for the moon, but in your way there don´t forget to dance with the stars and shine as bright as the sun"</p>
 </body>
 
 </head>
