--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 <h2>Former baby, former employee, current Student Front End Developer. The call in my life</h2>
 <h2> Dedicated and passionate Student at KYH. Main goal to become one of the best in coding and designing</h3>
 <p>"Aim for the moon, but in your way there don´t forget to dance with the stars and shine as bright as the sun"</p>
-<h1>jQuery & CSS3 Skills Bar</h1>
+
+<!--Skillbar-->
+
+<h1>Skills Bar</h1>
 
 <div class="skillbar clearfix " data-percent="20%">
 	<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
@@ -48,32 +51,28 @@
 	<div class="skill-bar-percent">25%</div>
 </div> <!-- End Skill Bar -->
 
-<div class="skillbar clearfix " data-percent="50%">
-	<div class="skillbar-title" style="background: #2c3e50;"><span>jQuery</span></div>
-	<div class="skillbar-bar" style="background: #2c3e50;"></div>
-	<div class="skill-bar-percent">50%</div>
-</div> <!-- End Skill Bar -->
-
-<div class="skillbar clearfix " data-percent="40%">
-	<div class="skillbar-title" style="background: #46465e;"><span>PHP</span></div>
-	<div class="skillbar-bar" style="background: #5a68a5;"></div>
-	<div class="skill-bar-percent">40%</div>
-</div> <!-- End Skill Bar -->
-
 <div class="skillbar clearfix " data-percent="75%">
-	<div class="skillbar-title" style="background: #333333;"><span>Wordpress</span></div>
+	<div class="skillbar-title" style="background: #333333;"><span>JS</span></div>
 	<div class="skillbar-bar" style="background: #525252;"></div>
 	<div class="skill-bar-percent">75%</div>
 </div> <!-- End Skill Bar -->
 
+<div class="skillbar clearfix " data-percent="40%">
+	<div class="skillbar-title" style="background: #46465e;"><span>Marketing Communications</span></div>
+	<div class="skillbar-bar" style="background: #5a68a5;"></div>
+	<div class="skill-bar-percent">40%</div>
+</div> <!-- End Skill Bar -->
+
+
+
 <div class="skillbar clearfix " data-percent="100%">
-	<div class="skillbar-title" style="background: #27ae60;"><span>SEO</span></div>
+	<div class="skillbar-title" style="background: #27ae60;"><span>B2B</span></div>
 	<div class="skillbar-bar" style="background: #2ecc71;"></div>
 	<div class="skill-bar-percent">100%</div>
 </div> <!-- End Skill Bar -->
 
 <div class="skillbar clearfix " data-percent="70%">
-	<div class="skillbar-title" style="background: #124e8c;"><span>Photoshop</span></div>
+	<div class="skillbar-title" style="background: #124e8c;"><span>Business Strategy</span></div>
 	<div class="skillbar-bar" style="background: #4288d0;"></div>
 	<div class="skill-bar-percent">70%</div>
 </div> <!-- End Skill Bar -->
