Added bars and changed colors

--- a/index.html
+++ b/index.html
@@ -39,43 +39,14 @@
 
 <h1>Skills Bar</h1>
 
-<div class="skillbar clearfix " data-percent="20%">
-	<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
-	<div class="skillbar-bar" style="background: #e67e22;"></div>
-	<div class="skill-bar-percent">20%</div>
-</div> <!-- End Skill Bar -->
+<ul id="skill">
+	<li><span class="bar HTML"></span><h3>HTML</h3></li>
+	<li><span class="bar CSS"></span><h3> CSS</h3></li>
+	<li><span class="bar JS"></span><h3>JS</h3></li>
+	<li><span class="bar Problemsolver"></span><h3>Problem Solver</h3></li>
+	<li><span class="bar B2B"></span><h3>B2B</h3></li>
+</ul>
 
-<div class="skillbar clearfix " data-percent="25%">
-	<div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
-	<div class="skillbar-bar" style="background: #3498db;"></div>
-	<div class="skill-bar-percent">25%</div>
-</div> <!-- End Skill Bar -->
-
-<div class="skillbar clearfix " data-percent="75%">
-	<div class="skillbar-title" style="background: #333333;"><span>JS</span></div>
-	<div class="skillbar-bar" style="background: #525252;"></div>
-	<div class="skill-bar-percent">75%</div>
-</div> <!-- End Skill Bar -->
-
-<div class="skillbar clearfix " data-percent="40%">
-	<div class="skillbar-title" style="background: #46465e;"><span>Marketing Communications</span></div>
-	<div class="skillbar-bar" style="background: #5a68a5;"></div>
-	<div class="skill-bar-percent">40%</div>
-</div> <!-- End Skill Bar -->
-
-
-
-<div class="skillbar clearfix " data-percent="100%">
-	<div class="skillbar-title" style="background: #27ae60;"><span>B2B</span></div>
-	<div class="skillbar-bar" style="background: #2ecc71;"></div>
-	<div class="skill-bar-percent">100%</div>
-</div> <!-- End Skill Bar -->
-
-<div class="skillbar clearfix " data-percent="70%">
-	<div class="skillbar-title" style="background: #124e8c;"><span>Business Strategy</span></div>
-	<div class="skillbar-bar" style="background: #4288d0;"></div>
-	<div class="skill-bar-percent">70%</div>
-</div> <!-- End Skill Bar -->
 
 </body>
 <script type="text/javascript" src="script.js"></script>
