Added some animation to site

--- a/index.html
+++ b/index.html
@@ -13,18 +13,33 @@
 
 <header>
     <header>
-        <nav>
-          <div class="nav">
-            <ul>
-            <li><a href="#">About /</a></li>
-            <li><a href="#">Skills /</a></li>
-            <li><a href="#">Projects /</a></li>
-            <li><a href="#">Contact /</a></li>
-            </ul>
-          </div>
-        </nav>
+          <div class="boxes">
+				<div class="btn btn-one">
+			<span>About / </span>
+		</div>
+			<div class="btn btn-two">
+			<span>Skills /</span>
+		</div>
+		   <div class="btn btn-three">
+			<span>Projects /</span>
+		</div>
+			<div class="btn btn-four">
+			<span>Contact /</span>
+		</div>
+		</div>
+	
+
+<!-- Hover #1 
+<div class="box-1">
+	<div class="btn btn-one">
+	  <span>HOVER ME</span>
+	</div>
+  </div>
+-->
       </header>
 </header>
+
+
 
 
 <body>
@@ -46,6 +61,8 @@
 	<li><span class="bar Problemsolver"></span><h3>Problem Solver</h3></li>
 	<li><span class="bar B2B"></span><h3>B2B</h3></li>
 </ul>
+
+
 
 
 </body>
