Changed btn and added font

--- a/index.html
+++ b/index.html
@@ -9,38 +9,37 @@
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Rokkitt" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Rokkitt|Shadows+Into+Light" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Roboto:300,400'>
 <link rel="stylesheet" type="text/css" href="main.css">
 
 <header>
     <header>
-		<div class="boxes">
-				<div class="btn btn-one">
-			<span>About / </span>
-		</div>
-			<div class="btn btn-two">
-			<span>Skills /</span>
-		</div>
-		   <div class="btn btn-three">
-			<span>Projects /</span>
-		</div>
-			<div class="btn btn-four">
-			<span>Contact /</span>
-		</div>
-		</div>
-	
 
-<!-- Hover #1 
+				
+		<div class="boxes">
+			<div id="btn-1" class="btn" ><span>About / </span></div>
+			<div class="btn btn-two"></div><span>Skills /</span></div>
+		   	<div class="btn btn-three"><span>Projects /</span></div>
+			<div class="btn btn-four"><span>Contact /</span></div>
+
+<!--			
+Hover #1 
 <div class="box-1">
 	<div class="btn btn-one">
 	  <span>HOVER ME</span>
 	</div>
   </div>
 -->
+<!----
+		<div class="flex-container">
+			<button>About / </button>
+			<button>Skills /</button>
+			<button>Projects /</button>
+			<button>Contact /</button>
+	</div>
+-->
       </header>
 </header>
-
-
-
 
 <body>
     <h1>Hey, I'm Susanne</h1> 
@@ -49,6 +48,18 @@
 <h2>Former baby, former University Student, former employee, current Student Front End Developer. The call in my life</h2>
 <h2> Dedicated and passionate Student at KYH. Main goal to become one of the best in coding and designing</h3>
 <p>"Aim for the moon, but in your way there don´t forget to dance with the stars and shine as bright as the sun"</p>
+
+
+<!--About-->
+
+<h1>About</h1>
+
+<h3>A gaming nerd who loves ......
+	Student Front End Developing, the new love in my life. 
+	Previous: master of science in business administraion/finance.
+	14 years of slaving in the magazine business 
+</h3>
+
 
 <!--Skillbar-->
 
@@ -69,3 +80,4 @@
 <script type="text/javascript" src="script.js"></script>
 </head>
 </html>
+
