--- a/index.html
+++ b/index.html
@@ -12,10 +12,30 @@
 <link href='https://fonts.googleapis.com/css?family=Roboto:300,400'>
 <link rel="stylesheet" type="text/css" href="main.css">
 
-<header>
-    <header>
+<body style="background-color:rgb(51,51,51); zoom: 1;transition-duration: 0s;"class="retina desktop css-animator"></body>
 
+<header id="header" role="banner">
+	<div id="nav-full">
+		<nav id="header-nav">
+			<li class="active">
+				<a class="flp-btn nav-home go-home" href="/" target ="_self" title="Home" rel="address:/">
+				<div class="nav-bt css-animator" style = "transition-duration:0s; top: 0px; transform(0px, 0px);"></div>
+			</a>
+			</li>
+			<li class="seperator"></li>
+			<a class="flp-btn nav-about go-about" href="/about" target ="_self" title="About Me" rel="address:/about"></a>
+		</li>
+		</div>
+</header>
+
+
+    
+
+	<div id="container" style="height: 725px; min-width: 641px;"></div>"
 				
+
+
+
 		<div class="boxes">
 			<div id="btn-1" class="btn" ><span>About / </span></div>
 			<div class="btn btn-two"></div><span>Skills /</span></div>
