Change of background and nav list

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 <link href='https://fonts.googleapis.com/css?family=Roboto:300,400'>
 <link rel="stylesheet" type="text/css" href="main.css">
 
-<body style="background-color:rgb(51,51,51); zoom: 1;transition-duration: 0s;"class="retina desktop css-animator"></body>
+<body style="background-color:rgb(2,201,201); zoom: 1;transition-duration: 0s;"class="retina desktop css-animator">
+	<div id="container" style="height: 725px; min-width: 641px;"></div>
+	<div id="screens">
+	<section id="a-home" class="screen" style="display: block; min-height:725px"></section>
+	</div>
+	<div class="sec-loader" style="display: none;">
+	<div class="sec-loader-display">
+		<div class="sec-loader-gauge">
+			<div class="loading-bar-gauge" style="width: 100%">
+			</div>
+			<div class="sec-loader-info">Loading</div>
+		</div>
+	</div>
 
 <header id="header" role="banner">
 	<div id="nav-full">
@@ -26,22 +38,16 @@
 			<a class="flp-btn nav-about go-about" href="/about" target ="_self" title="About Me" rel="address:/about"></a>
 		</li>
 		</div>
+		</nav>
+	</div>
 </header>
-
-
-    
-
-	<div id="container" style="height: 725px; min-width: 641px;"></div>"
-				
-
-
-
+<!---
 		<div class="boxes">
 			<div id="btn-1" class="btn" ><span>About / </span></div>
 			<div class="btn btn-two"></div><span>Skills /</span></div>
 		   	<div class="btn btn-three"><span>Projects /</span></div>
 			<div class="btn btn-four"><span>Contact /</span></div>
-
+		-->
 <!--			
 Hover #1 
 <div class="box-1">
@@ -58,8 +64,6 @@ Hover #1
 			<button>Contact /</button>
 	</div>
 -->
-      </header>
-</header>
 
 <body>
     <h1>Hey, I'm Susanne</h1> 
