--- a/index.html
+++ b/index.html
@@ -12,32 +12,16 @@
 <link href='https://fonts.googleapis.com/css?family=Roboto:300,400'>
 <link rel="stylesheet" type="text/css" href="main.css">
 
-<body style="background-color:rgb(2,201,201); zoom: 1;transition-duration: 0s;"class="retina desktop css-animator">
-	<div id="container" style="height: 725px; min-width: 641px;"></div>
-	<div id="screens">
-	<section id="a-home" class="screen" style="display: block; min-height:725px"></section>
-	</div>
-	<div class="sec-loader" style="display: none;">
-	<div class="sec-loader-display">
-		<div class="sec-loader-gauge">
-			<div class="loading-bar-gauge" style="width: 100%">
-			</div>
-			<div class="sec-loader-info">Loading</div>
-		</div>
-	</div>
-
-<header id="header" role="banner">
-	<div id="nav-full">
-		<nav id="header-nav">
-			<li class="active">
-				<a class="flp-btn nav-home go-home" href="/" target ="_self" title="Home" rel="address:/">
-				<div class="nav-bt css-animator" style = "transition-duration:0s; top: 0px; transform(0px, 0px);"></div>
-			</a>
-			</li>
-			<li class="seperator"></li>
-			<a class="flp-btn nav-about go-about" href="/about" target ="_self" title="About Me" rel="address:/about"></a>
-		</li>
-		</div>
+<header>
+	<div class="boxes">
+		<nav>
+			<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About Me</a></li>
+			<li><a href="#">Skills</a></li>
+			<li><a href="#">Projets</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
 		</nav>
 	</div>
 </header>
