--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 
 <header>
-	<div class="boxes">
-		<nav>
-			<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About Me</a></li>
-			<li><a href="#">Skills</a></li>
-			<li><a href="#">Projets</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
-		</nav>
+	<nav class="navigation">
+        <ul class="menu">
+          <li class="li"><a href="#">Home</a></li>
+          <li class="li"><a href="#">About me</a></li>
+          <li class="li"><a href="#">Skills</a></li>
+          <li class="li"><a href="#">Projects</a></li>
+          <li class="li"><a href="#">Contact</a></li>
+        </ul>
+      </nav>
 	</div>
 </header>
 <!---
