--- a/index.html
+++ b/index.html
@@ -15,40 +15,19 @@
 <header>
 	<nav class="navigation">
         <ul class="menu">
-          <li class="li"><a href="#">Home</a></li>
-          <li class="li"><a href="#">About me</a></li>
-          <li class="li"><a href="#">Skills</a></li>
-          <li class="li"><a href="#">Projects</a></li>
+          <li class="li"><a href="#">Home /</a></li>
+          <li class="li"><a href="#">About me /</a></li>
+          <li class="li"><a href="#">Skills /</a></li>
+          <li class="li"><a href="#">Projectsv/</a></li>
           <li class="li"><a href="#">Contact</a></li>
         </ul>
       </nav>
-	</div>
+	
 </header>
-<!---
-		<div class="boxes">
-			<div id="btn-1" class="btn" ><span>About / </span></div>
-			<div class="btn btn-two"></div><span>Skills /</span></div>
-		   	<div class="btn btn-three"><span>Projects /</span></div>
-			<div class="btn btn-four"><span>Contact /</span></div>
-		-->
-<!--			
-Hover #1 
-<div class="box-1">
-	<div class="btn btn-one">
-	  <span>HOVER ME</span>
-	</div>
-  </div>
--->
-<!----
-		<div class="flex-container">
-			<button>About / </button>
-			<button>Skills /</button>
-			<button>Projects /</button>
-			<button>Contact /</button>
-	</div>
--->
 
 <body>
+
+<!--Short Susanne-->
     <h1>Hey, I'm Susanne</h1> 
 
     <img class="susanne" src="images/IMG_5153.jpg" class="left">
@@ -57,7 +36,7 @@ Hover #1
 <p>"Aim for the moon, but in your way there don´t forget to dance with the stars and shine as bright as the sun"</p>
 
 
-<!--About-->
+<!--About OBS! "egen sida"-->
 
 <h1>About</h1>
 
@@ -68,7 +47,7 @@ Hover #1
 </h3>
 
 
-<!--Skillbar-->
+<!--Skillbar OBS! "egen sida"-->
 
 <h1>Skills Bar</h1>
 
@@ -80,7 +59,9 @@ Hover #1
 	<li><span class="bar B2B"></span><h3>B2B</h3></li>
 </ul>
 
+<!--Projects OBS "egen sida"-->
 
+<!--contact OBS "egen sida"-->
 
 
 </body>
