--- a/index.html
+++ b/index.html
@@ -64,39 +64,32 @@
 <!--contact OBS "egen sida" formulär för att skicka in bla bla-->
 
 <form class="postcard" action="">
-		<div class="receiver absolute">
-		  <label for="r-name" >To: </label>
-		  <input type="text" name="receiver-name" placeholder="Jean-Luc Picard">
+		<div class="name absolute">
+		  <label for="name-name" >Name: </label>
+		  <input type="text" name="name-name">
 		</div>
-		<div class="sender absolute">
-		  <label for="s-name" >From: </label>
-		  <input type="text" name="sender-name" placeholder="Geordi LaForge">
-		</div>
-		<div class="reply absolute">
-		  <label for="t-reply" >Reply: </label>
-		  <input type="text" name="reply-text" placeholder="Geordi@starfleet.com">
+		<div class="email absolute">
+		  <label for="email-name" >Email: </label>
+		  <input type="text" name="email-name">
 		</div>
 		<div class="message absolute">
-		  <label for="t-message" >Your message: </label>
+		  <label for="message-message" >Message: </label>
+		  <input type="text" name="message-text">
+		</div>
+		<div class="contact absolute">
+		  <label for="t-message" >Contact me: </label>
 		  <br>
-		  <textarea name="message" rows="12" cols="50" placeholder="Hello! Write your message here in this fancy-schmancy Box!"></textarea>
+		  <textarea name="contact" rows="15" cols="70" 
+		  placeholder="If you like to get in contact with me,
+		  feel free to get in touch and, I will respond as soon as possible.
+		  If you prefer to contact me directly, please send an email to: susannepet7427@gmail.com	  
+		  If you still want to know more about me, please find my cv here 
+		  Please also check out my github..."></textarea>
 		</div>
 		<div class="send-btn absolute">
-		  <button type="submit" name="button">Send your message >>></button>
+		  <button type="submit" name="button">Send</button>
 		</div>
 	  </form>
-
-
-<h2>If you like to get in contact with me,
-	feel free to get in touch and, I will respond
-	as soon as possible. 
-
-	If you prefer to contact me directly, please send an email
-	to: susannepet7427@gmail.com
-
-	If you still want to know more about me, please find my cv here 
-	Please also check out my github...
-</h2>
 
 
 </body>
