--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li class="li"><a href="#hey">Home /</a>&nbsp</li>
           <li class="li"><a href="#about">About me /</a>&nbsp</li>
           <li class="li"><a href="#skills">Skills /</a>&nbsp</li>
-          <li class="li"><a href="#projects">Projects /</a>&nbsp</li>
+          <li class="li"><a href="#project">Projects /</a>&nbsp</li>
           <li class="li"><a href="#post">Contact</a>&nbsp</li>
         </ul>
       </nav>
