--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html>
 <head>
@@ -13,7 +12,10 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 
 <header>
+<!--
 	<nav class="nav">
+	-->
+	<div class="container">
         <ul class="menu">
           <li class="li"><a href="#hey">Home /</a>&nbsp</li>
           <li class="li"><a href="#about">About me /</a>&nbsp</li>
@@ -21,7 +23,7 @@
           <li class="li"><a href="#project">Projects /</a>&nbsp</li>
           <li class="li"><a href="#post">Contact</a>&nbsp</li>
         </ul>
-      </nav>
+    </div>  
 </header>
 
 <body>
