--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 <body>
 
 <!--Short Susanne-->
-<div class="hey">
+<div class="landingpage">
 <h1>Hey, I'm Susanne</h1> 
-
-<img class="susanne" src="images/IMG_5153.jpg" class="left">
+<img id="susanne" src="images/IMG_5153.jpg">
 <h2>Former baby, former University Student, former employee, current Student Front End Developer. The call in my life</h2>
 <h2> Dedicated and passionate Student at KYH. Main goal to become one of the best in coding and designing</h3>
 <p>"Aim for the moon, but in your way there don´t forget to dance with the stars and shine as bright as the sun"</p>
