made more structure in the code

--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 <body>
 
 	<header>
-		<!--
-	<nav class="nav">
-	-->
-
+<!--Sitenav-->
 		<div class="container">
 			<br>
 			<ul class="menu">
@@ -34,8 +31,10 @@
 		</div>
 	</header>
 
-	<div class="wrap">
-		<!--Short Susanne lägga till id för varje fält-->
+	<div class="wrap"></div>
+	
+<!--Home field-->
+		
 		<div id="home-field" class="generic-field home1 home-hidden">
 			<h1>Hey, I'm Susanne</h1>
 			<img id="susanne" src="images/IMG_5153.jpg" alt="picture on SussieP">
@@ -44,8 +43,9 @@
 				<p>"Aim for the moon, but in your way there don´t forget to dance with the stars and shine as bright as the sun"</p>
 		</div>
 
-		<!--About OBS! "egen sida"-->
-		<div id="about-field" class="generic-field about-me2 about-me-hidden">
+<!--About OBS!-->
+		
+<div id="about-field" class="generic-field about-me2 about-me-hidden">
 
 			<h1>About</h1>
 
@@ -54,7 +54,7 @@
 			</h3>
 		</div>
 
-		<!--Skillbar OBS! "egen sida"-->
+<!--Skillbar-->
 		<div id="skills-field" class="generic-field skills3 skills-hidden">
 			<h1>Skills Bar</h1>
 
@@ -73,10 +73,10 @@
 
 		</div>
 
-		<!--Project OBS "egen sida"-->
+<!--Project-->
 		<div id="project-field" class="generic-field project4 project-hidden"></div>
 
-		<!--contact OBS "egen sida" formulär för att skicka in bla bla-->
+<!--Contact-->
 		<div id="post-field" class="generic-field post5 post-hidden">
 			<form class="postcard" action="#">
 				<div class="name absolute">
