Corrected hidden names plus trying to add different background colors

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
 
+
 	<header>
 <!--Sitenav-->
 		<div class="container">
@@ -74,8 +75,10 @@
 		</div>
 
 <!--Project-->
-		<div id="project-field" class="generic-field project4 project-hidden"></div>
-
+<div>
+		<div id="project-field" class="generic-field project4 project-hidden">
+		<img id="underconstructon" src="images/underconstruction.jpg" alt="picture on under construction">;
+	</div>
 <!--Contact-->
 		<div id="post-field" class="generic-field post5 post-hidden">
 			<form class="postcard" action="#">
