--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
 </head>
 
-<body>
+<body id="home-field"></body>
 
+<body id="skills-field"></body>
 
 	<header>
 <!--Sitenav-->
-		<div class="container">
+
+<div class="container">
 			<br>
 			<ul class="menu">
 				<li class="links"><a id='home' class="a-tag" href="#">Home /</a>&nbsp;</li>
@@ -30,12 +32,13 @@
 			</ul>
 			<br>
 		</div>
+	
 	</header>
 
 	<div class="wrap"></div>
 	
 <!--Home field-->
-		
+		<div>
 		<div id="home-field" class="generic-field home1 home-hidden">
 			<h1>Hey, I'm Susanne</h1>
 			<img id="susanne" src="images/IMG_5153.jpg" alt="picture on SussieP">
@@ -43,7 +46,7 @@
 			<h2> Dedicated and passionate Student at KYH. Main goal to become one of the best in coding and designing</h2>
 				<p>"Aim for the moon, but in your way there don´t forget to dance with the stars and shine as bright as the sun"</p>
 		</div>
-
+</div>
 <!--About OBS!-->
 		
 <div id="about-field" class="generic-field about-me2 about-me-hidden">
