Added a li under aboutme

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 	
 <!--Home field-->
 		<div>
-		<div id="home-field" class="generic-field home1 home-hidden">
+		<div class="flex-container" id="home-field" class="generic-field home1 home-hidden">
 			<h1>Hey, I'm Susanne</h1>
-			<img id="susanne" src="images/IMG_5153.jpg" alt="picture on SussieP">
+			<!--<img id="susanne" src="images/IMG_5153.jpg" alt="picture on SussieP">-->
 			<h2>Former baby, former University Student, former employee, current Student Front End Developer. The call in my life</h2>
 			<h2> Dedicated and passionate Student at KYH. Main goal to become one of the best in coding and designing</h2>
 				<p>"Aim for the moon, but in your way there don´t forget to dance with the stars and shine as bright as the sun"</p>
@@ -49,9 +49,17 @@
 
 			<h1>About</h1>
 
-			<h3 id="about">A gaming nerd who loves ...... Student Front End Developing, the new love in my life. Previous: master
-				of science in business administraion/finance. 14 years of slaving in the magazine business
-			</h3>
+			<div class=”aboutme”>
+				<ul>
+				   <li>Residence - Stockholm also know as "The Capital Of Scandinavia"</li>
+				   <li>Occupancy - Student Frontend developer KYH</li>
+				   <li>Previous occupancy - Product Manager International Magasines, Sweden & Norway</li>
+				   <li>Previous degress - Master of Science in Business Administration & Economics 
+					   (Luleå Tekniska Högskola and Lund University)</li>
+				   <li>Interests: Gaming Nerd, Snowboarding, Music, Horror Movies, Reading, knitting, 
+					   build Lego and visit old "nasty" pubs</li>
+				</ul>
+			 </div>
 		</div>
 
 <!--Skillbar-->
