Added li and changed fonts

--- a/index.html
+++ b/index.html
@@ -44,17 +44,16 @@
 		</div>
 </div>
 <!--About OBS!-->
-		
 <div id="about-field" class="generic-field about-me2 about-me-hidden">
+		
 
 			<h1>About</h1>
 
-			<div class=”aboutme”>
-				<ul>
-				   <li>Residence - Stockholm also know as "The Capital Of Scandinavia"</li>
-				   <li>Occupancy - Student Frontend developer KYH</li>
-				   <li>Previous occupancy - Product Manager International Magasines, Sweden & Norway</li>
-				   <li>Previous degress - Master of Science in Business Administration & Economics 
+				<ul class="aboutme">
+				   <li>Residence: Stockholm also know as "The Capital Of Scandinavia"</li>
+				   <li>Occupancy: Student Frontend developer KYH</li>
+				   <li>Previous occupancy: Product Manager International Magasines, Sweden & Norway</li>
+				   <li>Previous degree:  Master of Science in Business Administration & Economics 
 					   (Luleå Tekniska Högskola and Lund University)</li>
 				   <li>Interests: Gaming Nerd, Snowboarding, Music, Horror Movies, Reading, knitting, 
 					   build Lego and visit old "nasty" pubs</li>
