--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
 				<ul class="aboutme">
 				   <li>Residence: Stockholm also know as "The Capital Of Scandinavia"</li>
-				   <li>Occupancy: Student Frontend developer KYH</li>
-				   <li>Previous occupancy: Product Manager International Magasines, Sweden & Norway</li>
+				   <li>Occupation: Student Frontend developer KYH</li>
+				   <li>Previous occupation: Product Manager International Magasines, Sweden & Norway</li>
 				   <li>Previous degree:  Master of Science in Business Administration & Economics 
 					   (Luleå Tekniska Högskola and Lund University)</li>
 				   <li>Interests: Gaming Nerd, Snowboarding, Music, Horror Movies, Reading, knitting, 
