all these changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 
 </head>
-
+<body>
 	<header>
 <!--Sitenav-->
 
@@ -35,7 +35,7 @@
 	
 <!--Home field-->
 		<div>
-		<div class="flex-container" id="home-field" class="generic-field home1 home-hidden">
+		<div id="home-field" class="generic-field home1 home-hidden">
 			<h1>Hey, I'm Susanne</h1>
 			<!--<img id="susanne" src="images/IMG_5153.jpg" alt="picture on SussieP">-->
 			<h2>Former baby, former University Student, former employee, current Student Front End Developer. The call in my life</h2>
@@ -117,5 +117,6 @@
 	</div>
 	<script src="script.js"></script>
 </body>
+
 
 </html>
