--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 		<div>
 		<div id="home-field" class="generic-field home1 home-hidden">
 			<h1>Hey, I'm Susanne</h1>
-			<!--<img id="susanne" src="images/IMG_5153.jpg" alt="picture on SussieP">-->
+			<div class="flex-item">
+			<img id="susanne" src="images/IMG_5153.jpg" alt="picture on SussieP">
+		</div>
 			<h2>Former baby, former University Student, former employee, current Student Front End Developer. The call in my life</h2>
 			<h2> Dedicated and passionate Student at KYH. Main goal to become one of the best in coding and designing</h2>
 				<p>"Aim for the moon, but in your way there don´t forget to dance with the stars and shine as bright as the sun"</p>
