added icon buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Rokkitt" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Rokkitt|Shadows+Into+Light" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 
 </head>
@@ -52,13 +53,13 @@
 			<h1>About</h1>
 
 				<ul class="aboutme">
-				   <li>Residence: Stockholm also know as "The Capital Of Scandinavia"</li>
-				   <li>Occupation: Student Frontend developer KYH</li>
-				   <li>Previous occupation: Product Manager International Magasines, Sweden & Norway</li>
-				   <li>Previous degree:  Master of Science in Business Administration & Economics 
-					   (Luleå Tekniska Högskola and Lund University)</li>
+				   <li>Residence: Stockholm also know as "The Capital Of Scandinavia"</li><br>
+				   <li>Occupation: Student Frontend developer KYH</li><br>
+				   <li>Previous occupation: Product Manager International Magasines, Sweden & Norway</li><br>
+				   <li>Previous degree:  Master of Science in Business Administration & Economics<br>
+					   (Luleå Tekniska Högskola and Lund University)</li><br>
 				   <li>Interests: Gaming Nerd, Snowboarding, Music, Horror Movies, Reading, knitting, 
-					   build Lego and visit old "nasty" pubs</li>
+					   build Lego and visit old "nasty" pubs</li><br>
 				</ul>
 			 </div>
 		</div>
@@ -115,8 +116,18 @@
 				</div>
 			</form>
 		</div>
-
 	</div>
+	<footer>
+		<!-- Add font awesome icons to buttons  -->
+
+		<div class="flexbox">
+<button class="btn"><i class="fa fa-gamepad"></i></button>
+<button class="btn"><i class="fa fa-code"></i></button>
+<button class="btn"><i class="fa fa-headphones"></i></button>
+<button class="btn"><i class="fa fa-beer"></i></button>
+<button class="btn"><i class="fa fa-film"></i></button>
+</div>
+	</footer>
 	<script src="script.js"></script>
 </body>
 
