ändrat storleken på under construction

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
 			<h1>About</h1>
 
 				<ul class="aboutme">
-				   <li>Residence: Stockholm also know as "The Capital Of Scandinavia"</li><br>
+				   <li>Residence: Stockholm also known as "The Capital Of Scandinavia"</li><br>
 				   <li>Occupation: Student Frontend developer KYH</li><br>
 				   <li>Previous occupation: Product Manager International Magasines, Sweden & Norway</li><br>
-				   <li>Previous degree:  Master of Science in Business Administration & Economics<br>
-					   (Luleå Tekniska Högskola and Lund University)</li><br>
-				   <li>Interests: Gaming Nerd, Snowboarding, Music, Horror Movies, Reading, knitting, 
-					   build Lego and visit old "nasty" pubs</li><br>
+				   <li>Degree:  Master of Science in Business Administration & Economics
+					   (Lulea University of Technology, University of New South Wales, Lund University)</li><br>
+				   <li>Interests: Gaming Nerd, Coding, Snowboarding, Music, Horror Movies, Reading, Knitting, 
+					   Build Lego, Architecture, English Pubs</li><br>
 				</ul>
 			 </div>
 		</div>
 
 <!--Skillbar-->
 		<div id="skills-field" class="generic-field skills3 skills-hidden">
-			<h1>Skills Bar</h1>
+			<h1>Skills</h1>
 
 			<ul id="skill">
 				<li><span class="bar HTML"></span><h3>HTML</h3>
@@ -86,7 +86,8 @@
 <!--Project-->
 <div>
 		<div id="project-field" class="generic-field project4 project-hidden">
-		<img id="underconstructon" src="images/underconstruction.jpg" alt="picture on under construction">;
+			<img id="underconstruction" src="images/underconstruction.jpg" alt="picture on under construction">
+	</div>
 	</div>
 <!--Contact-->
 		<div id="post-field" class="generic-field post5 post-hidden">
@@ -121,11 +122,11 @@
 		<!-- Add font awesome icons to buttons  -->
 
 		<div class="flexbox">
-<button class="btn"><i class="fa fa-gamepad"></i></button>
-<button class="btn"><i class="fa fa-code"></i></button>
-<button class="btn"><i class="fa fa-headphones"></i></button>
-<button class="btn"><i class="fa fa-beer"></i></button>
-<button class="btn"><i class="fa fa-film"></i></button>
+<button class="btn"><i class="fa fa-gamepad"></i></button>&nbsp;&nbsp;
+<button class="btn"><i class="fa fa-code"></i></button>&nbsp;&nbsp;
+<button class="btn"><i class="fa fa-headphones"></i></button>&nbsp;&nbsp;
+<button class="btn"><i class="fa fa-beer"></i></button>&nbsp;&nbsp;
+<button class="btn"><i class="fa fa-film"></i></button>&nbsp;&nbsp;
 </div>
 	</footer>
 	<script src="script.js"></script>
