ändrat ikoner mm

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html>
-
+	
 <head>
 	<title>Susanne Pettersson</title>
-
+	<html lang="English">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Rokkitt" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Rokkitt|Shadows+Into+Light" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400'>
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC%7CRokkitt" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC%7CRokkitt%7CShadows+Into+Light" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400' rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 
@@ -52,17 +52,16 @@
 
 			<h1>About</h1>
 
-				<ul class="aboutme">
-				   <li>Residence: Stockholm also known as "The Capital Of Scandinavia"</li><br>
-				   <li>Occupation: Student Frontend developer KYH</li><br>
-				   <li>Previous occupation: Product Manager International Magasines, Sweden & Norway</li><br>
-				   <li>Degree:  Master of Science in Business Administration & Economics
-					   (Lulea University of Technology, University of New South Wales, Lund University)</li><br>
-				   <li>Interests: Gaming Nerd, Coding, Snowboarding, Music, Horror Movies, Reading, Knitting, 
-					   Build Lego, Architecture, English Pubs</li><br>
+				<ul class="fa-ul">
+				<li class="row"><i class="fa-li fa fa-spinner fa-spin"></i>Residence: Stockholm also known as "The Capital Of Scandinavia"<br></li>
+				<li class="row"><i class="fa-li fa fa-spinner fa-spin"></i>Occupation: Student Frontend developer KYH</li>
+				<li class="row"><i class="fa-li fa fa-spinner fa-spin"></i>Previous occupation: Product Manager International Magasines, Sweden & Norway</li>
+				<li class="row"><i class="fa-li fa fa-spinner fa-spin"></i>Degree:  Master of Science in Business Administration & Economics
+					   (Lulea University of Technology, University of New South Wales, Lund University)</li>
+				<li class="row"><i class="fa-li fa fa-spinner fa-spin"></i>Interests: Gaming Nerd, Coding, Snowboarding, Music, Horror Movies, Reading, Knitting, 
+					   Build Lego, Architecture, English Pubs</li>
 				</ul>
 			 </div>
-		</div>
 
 <!--Skillbar-->
 		<div id="skills-field" class="generic-field skills3 skills-hidden">
@@ -107,17 +106,16 @@
 				<div class="contact absolute">
 					<label for="t-message">Contact me: </label>
 					<br>
-					<textarea id="t-message" name="contact" rows="20" cols="60" placeholder="If you like to get in contact with me, feel free to get in touch and, I will respond as soon as possible.
-		  If you prefer to contact me directly, please send an email to: susannepet7427@gmail.com	  
-		  If you still want to know more about me, please find my cv here 
-		  Please also check out my github..."></textarea>
+					<textarea id="t-message" name="contact" rows="15" cols="60" 
+					placeholder="If you like to get in contact with me, feel free to get in touch and, I will respond as soon as possible.&#10;&#10;Please send an email to: susannepet7427@gmail.com&#10;&#10;If you want to know more about me, you can checkout my LinkedIn or GitHub account
+		  "></textarea>
 				</div>
 				<div class="send-btn absolute">
 					<button type="submit" name="button">Send</button>
 				</div>
 			</form>
 		</div>
-	</div>
+	
 	<footer>
 		<!-- Add font awesome icons to buttons  -->
 
@@ -128,9 +126,13 @@
 <button class="btn"><i class="fa fa-beer"></i></button>&nbsp;&nbsp;
 <button class="btn"><i class="fa fa-film"></i></button>&nbsp;&nbsp;
 </div>
+
+<div class="clickable">
+<a href="https://www.linkedin.com/in/susanne-pettersson-75b3263"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;
+<a href="https://github.com/Wilma54"><i class="fa fa-github"></i></a>&nbsp;&nbsp;
+</div>
 	</footer>
 	<script src="script.js"></script>
 </body>
-
 
 </html>
