Sista ändringarna på release 1

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	
 <head>
 	<title>Susanne Pettersson</title>
-	<html lang="English">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
@@ -15,6 +14,7 @@
 
 </head>
 <body>
+
 	<header>
 <!--Sitenav-->
 
@@ -32,24 +32,24 @@
 	
 	</header>
 
-	<div class="wrap"></div>
+<div class="wrap"></div>
 	
 <!--Home field-->
-		<div>
-		<div id="home-field" class="generic-field home1 home-hidden">
+<div>
+	<div id="home-field" class="generic-field home1 home-hidden">
 			<h1>Hey, I'm Susanne</h1>
 			<div class="flex-item">
 			<img id="susanne" src="images/IMG_5153.jpg" alt="picture on SussieP">
-		</div>
+	</div>
 			<h2>Former baby, former University Student, former employee, current Student Front End Developer. The call in my life</h2>
 			<h2> Dedicated and passionate Student at KYH. Main goal to become one of the best in coding and designing</h2>
 				<p>"Aim for the moon, but in your way there don´t forget to dance with the stars and shine as bright as the sun"</p>
-		</div>
+	</div>
 </div>
+
 <!--About OBS!-->
 <div id="about-field" class="generic-field about-me2 about-me-hidden">
-		
-
+	
 			<h1>About</h1>
 
 				<ul class="fa-ul">
@@ -86,8 +86,8 @@
 <div>
 		<div id="project-field" class="generic-field project4 project-hidden">
 			<img id="underconstruction" src="images/underconstruction.jpg" alt="picture on under construction">
-	</div>
-	</div>
+		</div>
+</div>
 <!--Contact-->
 		<div id="post-field" class="generic-field post5 post-hidden">
 			<form class="postcard" action="#">
@@ -107,7 +107,7 @@
 					<label for="t-message">Contact me: </label>
 					<br>
 					<textarea id="t-message" name="contact" rows="15" cols="60" 
-					placeholder="If you like to get in contact with me, feel free to get in touch and, I will respond as soon as possible.&#10;&#10;Please send an email to: susannepet7427@gmail.com&#10;&#10;If you want to know more about me, you can checkout my LinkedIn or GitHub account
+					placeholder="If you like to get in contact with me, feel free to get in touch and, I will respond as soon as possible.&#10;&#10;Please send an email to: susannepet7427@gmail.com&#10;&#10;If you want to know more about me, you can checkout my LinkedIn or GitHub account. Follow the links down at the right
 		  "></textarea>
 				</div>
 				<div class="send-btn absolute">
@@ -117,7 +117,8 @@
 		</div>
 	
 	<footer>
-		<!-- Add font awesome icons to buttons  -->
+
+<!-- Add font awesome icons to buttons  -->
 
 		<div class="flexbox">
 <button class="btn"><i class="fa fa-gamepad"></i></button>&nbsp;&nbsp;
@@ -127,11 +128,14 @@
 <button class="btn"><i class="fa fa-film"></i></button>&nbsp;&nbsp;
 </div>
 
+<!--link "buttons"-->
+
 <div class="clickable">
 <a href="https://www.linkedin.com/in/susanne-pettersson-75b3263"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;
 <a href="https://github.com/Wilma54"><i class="fa fa-github"></i></a>&nbsp;&nbsp;
 </div>
 	</footer>
+
 	<script src="script.js"></script>
 </body>
 
