changes on flexbox

--- a/index.html
+++ b/index.html
@@ -125,15 +125,18 @@
 <button class="btn"><i class="fa fa-code"></i></button>&nbsp;&nbsp;
 <button class="btn"><i class="fa fa-headphones"></i></button>&nbsp;&nbsp;
 <button class="btn"><i class="fa fa-beer"></i></button>&nbsp;&nbsp;
-<button class="btn"><i class="fa fa-film"></i></button>&nbsp;&nbsp;
+<button class="btn"><i class="fa fa-film"></i></button>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+		<div class="clickable">
+	<a href="https://www.linkedin.com/in/susanne-pettersson-75b3263"><i class="fa fa-linkedin"></i></a>&nbsp;
+	<a href="https://github.com/Wilma54"><i class="fa fa-github"></i></a>&nbsp;
+	</div>
+
 </div>
 
 <!--link "buttons"-->
 
-<div class="clickable">
-<a href="https://www.linkedin.com/in/susanne-pettersson-75b3263"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;
-<a href="https://github.com/Wilma54"><i class="fa fa-github"></i></a>&nbsp;&nbsp;
-</div>
+
 	</footer>
 
 	<script src="script.js"></script>
