--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 <body>
 
-	<header>
+
 <!--Sitenav-->
+	<header class="main-header">
 
 <div class="container">
 			<br>
@@ -48,19 +49,21 @@
 </div>
 
 <!--About OBS!-->
+
 <div id="about-field" class="generic-field about-me2 about-me-hidden">
 	
-			<h1>About</h1>
-
+			<h1>About Me</h1>
+	<div class="flex-container">
 				<ul class="fa-ul">
-				<li class="row"><i class="fa-li fa fa-spinner fa-spin"></i>Residence: Stockholm also known as "The Capital Of Scandinavia"<br></li>
+				<li class="row"><i class="fa-li fa fa-spinner fa-spin"></i>Residence: Stockholm also known as "The Capital Of Scandinavia"</li>
 				<li class="row"><i class="fa-li fa fa-spinner fa-spin"></i>Occupation: Student Frontend developer KYH</li>
 				<li class="row"><i class="fa-li fa fa-spinner fa-spin"></i>Previous occupation: Product Manager International Magasines, Sweden & Norway</li>
 				<li class="row"><i class="fa-li fa fa-spinner fa-spin"></i>Degree:  Master of Science in Business Administration & Economics
-					   (Lulea University of Technology, University of New South Wales, Lund University)</li>
+				(Lulea University of Technology, University of New South Wales, Lund University)</li>
 				<li class="row"><i class="fa-li fa fa-spinner fa-spin"></i>Interests: Gaming Nerd, Coding, Snowboarding, Music, Horror Movies, Reading, Knitting, 
-					   Build Lego, Architecture, English Pubs</li>
+				Build Lego, Architecture, English Pubs</li>
 				</ul>
+			</div>
 			 </div>
 
 <!--Skillbar-->
@@ -126,16 +129,13 @@
 <button class="btn"><i class="fa fa-headphones"></i></button>&nbsp;&nbsp;
 <button class="btn"><i class="fa fa-beer"></i></button>&nbsp;&nbsp;
 <button class="btn"><i class="fa fa-film"></i></button>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
+<!--link "buttons"-->
 		<div class="clickable">
 	<a href="https://www.linkedin.com/in/susanne-pettersson-75b3263"><i class="fa fa-linkedin"></i></a>&nbsp;
 	<a href="https://github.com/Wilma54"><i class="fa fa-github"></i></a>&nbsp;
 	</div>
 
 </div>
-
-<!--link "buttons"-->
-
 
 	</footer>
 
